--- a/api-gateway/.env.example
+++ b/api-gateway/.env.example
@@ -2,6 +2,9 @@ NODE_ENV=development
 PORT=3000
 
 IDENTITY_SERVICE_URL=http://identity-service:3001/
+STUDENT_SERVICE_URL=http://student-service:3002/
+COURSE_SERVICE_URL=http://course-service:3003/
+GRADE_SERVICE_URL=http://grade-service:3004/
 # MEDIA_SERVICE_URL=http://media-service:3003/
 # SEARCH_SERVICE_URL=http://search-service:3004/
 NOTIFICATION_SERVICE_URL=http://notification-service:3008/
